# budget_tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  DockerFile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
app/: main.py
app/core/: database.py  dependency.py  email_templates.py  exceptions.py  security.py  seed.py  settings.py  utils.py
app/models/: __init__.py  budget_cycles.py  categories.py  expenses.py  refresh_tokens.py  tokens.py  users.py
app/repositories/: admins.py  budget_cycles.py  categories.py  expenses.py  refresh_tokens.py  users.py  verification_tokens.py
app/routers/: __init__.py  admins.py  auth.py  budget_cycles.py  categories.py  expenses.py  users.py
app/schemas/: admins.py  budget_cycles.py  categories.py  expenses.py  users.py
app/services/: admins.py  auth.py  budget_cycles.py  categories.py  expenses.py  users.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AdminNavbar.jsx  AdminRoute.jsx  ColorPicker.jsx  CycleSummary.jsx  ExpenseForm.jsx  Navbar.jsx  ProtectedRoute.jsx  PublicRoute.jsx  Toast.jsx
frontend/src/pages/: BudgetCycles.jsx  Categories.jsx  Expenses.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  ResetPassword.jsx  (+1 more)
migrations/: env.py
migrations/versions/: 2e50ec8bbe54_add_is_admin_to_users_and_new_email_to_.py  51616c93141b_changed_is_admin_default_to_false.py  61f372747915_add_server_default_and_partial_index_to_.py  c4f99ea72e84_initial_migration.py
(+12 files in other folders)
